[be, api, v0] add put-record endpoint to index-api
