# backend/openapi.yaml
@@ -386,6 +386,40 @@ paths:
                               - $ref: '#/components/schemas/CollectionInfo'
                 required:
                   - meta
+    put:
+      summary: update record info
+      description:
+        Returns OK if record has been updated. This endpoint requires the
+        admin-role.
+      tags:
+        - index
+      security:
+        - sessionCookieAuth: []
+      parameters:
+        - $ref: '#/components/parameters/requestId'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                content:
+                  type: object
+                  description: request payload
+                  properties:
+                    name:
+                      type: string
+                      description: new record name
+                    description:
+                      type: string
+                      description: new record description
+                    thumbnail:
+                      type: string
+                      description: new (base64-encoded) image
+                      format: byte
+      responses:
+        '200':
+          $ref: '#/components/responses/GenericResponseNoContent'
   /api/v0/index/record/{videoId}:
     get:
       summary: get record info
